--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">InstaFeed+</string>
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
 </resources>
