privacy policy added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
 
     <!-- magazine fragment -->
     <string name="magazine_title">Magazine</string>
+    <string name="privacy_policy_url">https://krmayank911.github.io/buggyartsWeb/</string>
 
 
 </resources>
